<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>tsdf_plusplus_ros</name>
  <version>1.0.0</version>
  <description>TSDF++ ROS interface</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>tsdf_plusplus</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>roscpp</depend>
</package>
